--- a/files/css/general.css
+++ b/files/css/general.css
@@ -166,3 +166,21 @@ button.green-submit-btn i {
 	color: white;
 	text-decoration: underline;
 }
+
+
+.bgr-top, .bgr-bottom {
+	position: fixed;
+	width: 500px;
+	height: 300px;
+	left: calc(50% - 250px);
+	z-index: -1000;
+}
+
+.bgr-top {
+	top: 0;
+}
+
+.bgr-bottom {
+	background-color: #999999;
+	bottom: 0;
+}
